에러 없이 돌아가는 상태, SearchBookActivity.kt 불필요 제거

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Library</string>
+    <string name="kakao_rest_api_key" translatable="false">aa2242eee99b05e3b3eb37407845fd03</string>
 </resources>
